kubewarden/M0003-metadata-portefaix-labels/policy-M0001.yaml
# Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: policies.kubewarden.io/v1alpha2
kind: ClusterAdmissionPolicy
metadata:
  name: portefaix-M0003
spec:
  module: registry://ghcr.io/kubewarden/policies/safe-labels:v0.1.7
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources:
      - "ConfigMap"
      - "Secret"
      - "Pod"
      - "Deployment"
      - "DaemonSet"
      - "StatefulSet"
      - "Service"
      - "Job"
      - "CronJob"
      - "Role"
      - "RoleBinding"
      - "ClusterRole"
      - "ClusterRoleBinding"
      - "ServiceAccount"
      - "Ingress"
      - "IngressClass"
      - "NetworkPolicy"
      - "PodDisruptionBudget"
      - "StorageClass"
      operations:
      - CREATE
      - UPDATE
  mutating: false
  settings:
    denied_labels: []
    mandatory_labels:
    - portefaix.xyz/version
    constrained_labels: []
