kubewarden/M0003-metadata-portefaix-labels/policy-M0003.yaml
# SPDX-FileCopyrightText: Copyright (C) Nicolas Lamirault <nicolas.lamirault@gmail.com>
# SPDX-License-Identifier: Apache-2.0

---
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: portefaix-M0003
  metadata:
    annotations:
      io.kubewarden.policy.title: Metadata should have portefaix.xyz labels
      io.kubewarden.policy.category: Resource validation
      io.kubewarden.policy.severity: low
      io.kubewarden.policy.description: >-
        Metadata should have Portefaix labels:
        Labels are:
          - portefaix.xyz/version
spec:
  module: registry://ghcr.io/kubewarden/policies/safe-labels:v0.1.14
  rules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      resources: ["pods", "services"]
      operations:
      - CREATE
      - UPDATE
    - apiGroups: ["apps"]
      apiVersions: ["v1"]
      resources: ["deployments","replicasets","daemonsets","statefulsets"]
      operations:
      - CREATE
      - UPDATE
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  mutating: false
  settings:
    denied_labels: []
    mandatory_labels:
    - app.kubernetes.io/name
    - app.kubernetes.io/instance
    - app.kubernetes.io/version
    - app.kubernetes.io/component
    - app.kubernetes.io/part-of
    - app.kubernetes.io/managed-by
    constrained_labels: []
